# heatcompact3d

./: CMakeLists.txt  README.md  heatcompact3d.md  index.html  search.html
interface/: field_cpu_type.html  field_gpu_type.html  field_type.html  integrate_proc.html  rhs_field.html  sixth_order_compact.html  sixth_order_compact_1.html  sixth_order_compact_2.html  sixth_order_compact_2nd.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: boundary_schemes.html  differentiate.html  field.html  field_cpu.html  field_gpu.html  field_module.html  stencil.html  thomas_module.html  time_integration.html  time_integrator.html
proc/: ab2_timestep.html  apply_stencil.html  apply_stencil_along.html  diff_nonperiodic.html  diff_periodic.html  dump.html  euler_timestep.html  field_add_field.html  field_add_real.html  field_constructor.html  field_cpu_constructor.html  field_gpu_constructor.html  field_mul_real.html  field_sub_field.html  flip.html  get_dirichlet_boundary.html  get_lower.html  get_upper.html  integrate_ab2.html  integrate_euler.html  integrate_rk3.html  is_equal.html  is_equal~2.html  nx.html  ny.html  nz.html  reverse.html  rhs.html  rhs_x.html  rhs_y.html  rhs_z.html  rhs~2.html  sixth_order_compact_1_nonperiodic.html  sixth_order_compact_1_periodic.html  sixth_order_compact_2_nonperiodic.html  sixth_order_compact_2_periodic.html  sixth_order_compact_nonperiodic.html  sixth_order_compact_nonperiodic_2nd.html  sixth_order_compact_periodic.html  sixth_order_compact_periodic_2nd.html  (+4 more)
sourcefile/: module_boundary_schemes.f90.html  module_differentiate.f90.html  module_field.f90.html  module_field_cpu.f90.html  module_field_gpu.f90.html  module_stencil.f90.html  module_thomas.f90.html  module_time_integration.f90.html
src/: main.f90  main_field.f90  main_thomas.f90  module_boundary_schemes.f90  module_coefficients.f90  module_differentiate.f90  module_field.f90  module_field_cpu.f90  module_field_gpu.f90  module_stencil.f90  module_thomas.f90  module_time_integration.f90
(+25 files in other folders)
